--- a/known_devices.yaml
+++ b/known_devices.yaml
@@ -16,3 +16,57 @@ ps4:
   picture:
   track: true
   vendor: Sony Interactive Entertainment Inc.
+
+2c3ae804e43e:
+  hide_if_away: false
+  icon:
+  mac: 2C:3A:E8:04:E4:3E
+  name: 2c3ae804e43e
+  picture:
+  track: true
+  vendor: Espressif Inc.
+
+b827ebb2c33d:
+  hide_if_away: false
+  icon:
+  mac: B8:27:EB:B2:C3:3D
+  name: b827ebb2c33d
+  picture:
+  track: true
+  vendor: Raspberry Pi Foundation
+
+18d6c73d49ce:
+  hide_if_away: false
+  icon:
+  mac: 18:D6:C7:3D:49:CE
+  name: 18d6c73d49ce
+  picture:
+  track: true
+  vendor: TP-LINK TECHNOLOGIES CO.,LTD.
+
+08d42b12ff4c:
+  hide_if_away: false
+  icon:
+  mac: 08:D4:2B:12:FF:4C
+  name: 08d42b12ff4c
+  picture:
+  track: true
+  vendor: Samsung Electronics Co.,Ltd
+
+c0eefbf2d226:
+  hide_if_away: false
+  icon:
+  mac: C0:EE:FB:F2:D2:26
+  name: c0eefbf2d226
+  picture:
+  track: true
+  vendor: OnePlus Tech (Shenzhen) Ltd
+
+9061aefd7ff5:
+  hide_if_away: false
+  icon:
+  mac: 90:61:AE:FD:7F:F5
+  name: 9061aefd7ff5
+  picture:
+  track: true
+  vendor: Intel Corporate
